# myapps

./: README.md  pyproject.toml
backend/: go.mod  go.sum  main.go
backend/db/: schema.sql
backend/handler/: healthz.go  sentiment_text.go
backend/handler/router/: router.go
backend/model/: error.go  sentiment_text.go
backend/service/: sentiment_text.go
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: App1.js  App2.js  App3.js  Menu.js
frontend/src/style/: App.css  App1.css
python/: server.py
