[tool.poetry]
name = "my-apps"
version = "0.1.0"
description = ""
authors = ["jam0818 <n.kawamura0818@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
